[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools:_build_meta"

[project]
name = "ultra-pipeline-framework"
version = "1.0.0"
description = "Production-grade AI agent orchestration toolkit — DAG-based context, self-evaluating pipelines, skill bundles with memory"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Sylvain Galliez", email = "zedarvates@proton.me"}
]
keywords = ["ai", "agent", "pipeline", "dag", "orchestration", "skill-bundle"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/zedarvates/ultra-pipeline-framework"
Repository = "https://github.com/zedarvates/ultra-pipeline-framework"
Issues = "https://github.com/zedarvates/ultra-pipeline-framework/issues"

[tool.setuptools]
py-modules = ["dag_context", "self_eval_pipeline", "skill_bundler", "ultra_pipeline", "ultra"]
